--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
         <h1 id="logo">Fire Department Training Program</h1>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Sign up",'#' %></li>
-            <li><%= link_to "Log in", '#' %></li>
+            <li><%= link_to "Sign up",'/users/signup' %></li>
+            <li><%= link_to "Log in", '/users/login' %></li>
           </ul>
         </nav>
       </div>
