--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+
+}
+th, td {
+    padding: 5px;
+    text-align: left;
+}
+table {
+    align: "center";
+    width: 100%;    
+    background-color: #f1f1c1;
+    font-size: 120%;
+}
+
+caption {
+	font-size: 200%;
+}
+
+.center {
+	margin: auto;
+	padding: 10px;
+}
