--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,26 @@
-<div> 
-      <ul >
-            Name:
-            <%= @user_info.name %>
-            </li>
-            <li>
-            Employee ID:
-            <%= @user_info.employee_id %>
-            </li>
-            <li>
-            Address:
-            <%= @user_info.address %>
-            </li>
-            <li>
-            Phone:
-            <%= @user_info.phone %>
-            </li>
+<div class="center"> 
+      <table style="width:50%">
+        <caption>Personal Information</caption>
+        <tr>
+          <th>Name</th>
+          <th> <%= @user_info.name %> </th>
+        </tr>
+        <tr>
+          <th>Employee ID</th>
+          <th> <%= @user_info.employee_id %> </th>
+        </tr>
+        <tr>
+          <th>Class</th>
+          <th> <%= @subordinate_infos.length > 0 ? "Supervisor" : "Employee" %> </th>
+        </tr>
+      </table>
 
-      </ul>
-      <%= link_to_if(!@subordinate_infos.nil?, "show my subordinates", {controller: "sessions", action: "new"}) %>
 
-      <table border="1" style="width:100%">
+      <% if @subordinate_infos.length > 0 %>
+      <br>
+      <br>
+      <table border="1" style="width:50%">
+      <caption>Information of Employees</caption>
         <thead>
           <tr>
            
@@ -41,8 +42,6 @@
           <% end %>
         </tbody>
       </table>
-
-
-
+      <% end %>
 
 </div>
