--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,49 +1,2 @@
-<div class="center"> 
-      <table style="width:50%">
-        <caption>Personal Information</caption>
-        <tr>
-          <th>Name</th>
-          <th> <%= @user_info.name %> </th>
-        </tr>
-        <tr>
-          <th>Employee ID</th>
-          <th> <%= @user_info.employee_id %> </th>
-        </tr>
-        <tr>
-          <th>Class</th>
-          <th> <%= @subordinate_infos.length > 0 ? "Supervisor" : "Employee" %> </th>
-        </tr>
-      </table>
+<%= render 'users/show'%>
 
-
-      <% if @subordinate_infos.length > 0 %>
-      <br>
-      <br>
-      <table border="1" style="width:50%">
-      <caption>Information of Employees</caption>
-        <thead>
-          <tr>
-           
-            <th>Name</th>
-            <th>ID</th>
-            <th>Address</th>
-            <th>Phone</th>     
-            <th>action</th>
-            
-          </tr>
-        </thead>
-        <tbody>
-          <% @subordinate_infos.each do |x| %>
-            <tr>
-                <td><%= x.name %></td>
-                <td><%= x.employee_id %></td>
-                <td><%= x.address %></td>
-                <td><%= x.phone %></td>
-                <td><%= link_to "Edit" "" %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <% end %>
-
-</div>
