--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -12,9 +12,11 @@
     
   <input id="tab3" type="radio" name="tabs">
   <label for="tab3">Class</label>
-    
-  <input id="tab4" type="radio" name="tabs">
-  <label for="tab4">Employees</label>
+
+  <% if @user.is_supervisor %>
+    <input id="tab4" type="radio" name="tabs">
+    <label for="tab4">Employees</label>
+  <% end %>
     
   <section id="content1">
 <div class="center"> 
@@ -27,43 +29,8 @@
           <th>Employee ID</th>
           <th> <%= @user_info.employee_id %> </th>
         </tr>
-        <tr>
-          <th>Class</th>
-          <th> <%= @subordinate_infos.length > 0 ? "Supervisor" : "Employee" %> </th>
-        </tr>
+        
       </table>
-
-
-      <% if @subordinate_infos.length > 0 %>
-      <br>
-      <br>
-      <table border="1" style="width:50%">
-      <caption>Information of Employees</caption>
-        <thead>
-          <tr>
-           
-            <th>Name</th>
-            <th>ID</th>
-            <th>Address</th>
-            <th>Phone</th>     
-            <th>action</th>
-            
-          </tr>
-        </thead>
-        <tbody>
-          <% @subordinate_infos.each do |x| %>
-            <tr>
-                <td><%= x.name %></td>
-                <td><%= x.employee_id %></td>
-                <td><%= x.address %></td>
-                <td><%= x.phone %></td>
-                <td><%= link_to "Edit" "" %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <% end %>
-
 </div>
   </section>
     
@@ -86,12 +53,32 @@
   </section>
     
   <section id="content4">
-    <p>
-      Bacon ipsum dolor sit amet landjaeger sausage brisket, jerky drumstick fatback boudin ball tip turducken. Pork belly meatball t-bone bresaola tail filet mignon kevin turkey ribeye shank flank doner cow kielbasa shankle. Pig swine chicken hamburger, tenderloin turkey rump ball tip sirloin frankfurter meatloaf boudin brisket ham hock. Hamburger venison brisket tri-tip andouille pork belly ball tip short ribs biltong meatball chuck. Pork chop ribeye tail short ribs, beef hamburger meatball kielbasa rump corned beef porchetta landjaeger flank. Doner rump frankfurter meatball meatloaf, cow kevin pork pork loin venison fatback spare ribs salami beef ribs.
-    </p>
-    <p>
-      Jerky jowl pork chop tongue, kielbasa shank venison. Capicola shank pig ribeye leberkas filet mignon brisket beef kevin tenderloin porchetta. Capicola fatback venison shank kielbasa, drumstick ribeye landjaeger beef kevin tail meatball pastrami prosciutto pancetta. Tail kevin spare ribs ground round ham ham hock brisket shoulder. Corned beef tri-tip leberkas flank sausage ham hock filet mignon beef ribs pancetta turkey.
-    </p>
+
+    <table border="1" style="width:50%">
+      <caption>Information of Employees</caption>
+        <thead>
+          <tr>
+           
+            <th>Name</th>
+            <th>ID</th>
+            <th>Address</th>
+            <th>Phone</th>     
+            <th>action</th>
+            
+          </tr>
+        </thead>
+        <tbody>
+          <% @user_info_total.each do |x| %>
+            <tr>
+                <td><%= x.name %></td>
+                <td><%= x.employee_id %></td>
+                <td><%= x.address %></td>
+                <td><%= x.phone %></td>
+                <td><%= link_to "Edit" "" %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
   </section>
     
 </div>
