class added name

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -72,7 +72,7 @@
         <tbody>
            <% @user_classes.each do |x| %>
               <tr>
-                  <td><%= @class_name[x.class_number] %></td>
+                  <td><%= @class_names[x.class_number] %></td>
                   <td><%= x.class_number %></td>
                   <td><%= x.ce_hours %></td>
                   <td><%= x.grade %></td>
