--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,12 +20,24 @@
 <div class="center"> 
       <table style="width:50%">
         <tr>
-          <th>Name</th>
+        <th>Name</th>
           <th> <%= @user_info.name %> </th>
         </tr>
         <tr>
           <th>Employee ID</th>
           <th> <%= @user_info.employee_id %> </th>
+        </tr>
+        <tr>
+          <th>SSN</th>
+          <th> <%= @user_info.ssn %> </th>
+        </tr>
+        <tr>
+          <th>Phone Number</th>
+          <th> <%= @user_info.phone %> </th>
+        </tr>
+        <tr>
+          <th>Division</th>
+          <th> <%= @user_info.division %> </th>
         </tr>
         
       </table>
