--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,2 @@
-<h2>Hello World</h2>
-
-<p>
-
-</p>
+<body background="http://www.natcom.org/uploadedImages/More_Scholarly_Resources/Doctoral_Program_Resource_Guide/TexasAM%20Campus.jpg">
+</body>
