added two pages

--- a/app/views/class_infos/new.html.erb
+++ b/app/views/class_infos/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Create new Class</h1>
+<h1>Create A New Class</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -18,7 +18,7 @@
       <%= f.label "Class Host" %>
       <%= f.text_field :class_host %>
 
-      <%= f.submit "Create class", class: "btn btn-primary" %>
+      <%= f.submit "Create Class", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
