--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
  <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
+    <header class="navbar navbar-fixed-top">
       <div class="container">
-        <h1 id="logo">Fire Department Training Program</h1>
+        <a id="logo" href="/"> Fire Department Training Program</a>
+        
         <nav>
           <ul class="nav navbar-nav navbar-right">
           <% if false %>
@@ -17,8 +18,8 @@
             <% end %>
             <% if logged_in? %>
             <li id="fat-menu" class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Account <b class="caret"></b>
+              <a id="menu_controller" href="#" class="dropdown-toggle" data-toggle="dropdown">
+                 Howdy <%= @current_user.name %> <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", url_for(:controller => :sessions, :action => :index) %></li>
