Replace tabs with different URLs, didn't delete previous settings

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
-<body background="http://www.natcom.org/uploadedImages/More_Scholarly_Resources/Doctoral_Program_Resource_Guide/TexasAM%20Campus.jpg">
+<body background="http://files.vividscreen.info/soft/6462fb5dcb9aa1582ddddc6ad2d5b11b/Cleveland-Cavaliers-NBA-Basketball-Team-wide-i.jpg">
 </body>
