--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
                  Howdy <%= @current_user.name.split(" ")[1] %> <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Profile", url_for(:controller => :sessions, :action => :index) %></li>
+                <li><%= link_to "Profile", url_for(:controller => :sessions, :action => :profile) %></li>
                 <li><%= link_to "Settings", edit_user_path(current_user) %></li>
                 <li class="divider"></li>
                 <li>
