Create manage page for supervisor

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", url_for(:controller => :sessions, :action => :profile) %></li>
                 <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+                <% if supervisor? %>
+                <li><%= link_to "manage", controller: "sessions", action: "manage" %></li>
+                <% end %>
                 <li class="divider"></li>
                 <li>
                   <%= link_to "Sign out", logout_path, method: "delete" %>
