--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,11 +3,11 @@
 <form class="container">
     <div class="row">
         <div class="col-md-3">
-            <h1 style='float: left;'>Employee Information</h1>
+            <h1 style='float: left;'><%= @user_info.name %></h1>
         </div>
 
         <div class="col-md-3">
-            <button class="btn" style="float: right; position: relative; top: 10px; right: 10px;"><%= link_to "Return", '../index' %></button>
+            <button class="btn" style="float: right; position: relative; top: 10px; right: 10px;"><%= link_to "Return", '../profile' %></button>
         </div>
     </div>
 </form>
