--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <form class="container">
     <div class="row">
         <div class="col-md-3">
-            <h1 style='float: left;'><%= @user_info.name %></h1>
+            <h1 style='float: left;'><%= @user.name %></h1>
         </div>
 
         <div class="col-md-3">
@@ -25,6 +25,7 @@
     
   <section id="content1">
 <div class="center"> 
+<% unless @user_info.nil?%>
       <table style="width:50%">
         <tr>
         <th>Name</th>
@@ -48,11 +49,15 @@
         </tr>
         
       </table>
+  <%end%>
+  <% if @user_info.nil?%>
+    <p>No information for current user.</p>
+  <% end %>
 </div>
   </section>
     
   <section id="content2">
-    <button class="btn" style="float: right; position: relative;"><%= link_to "Add Certificate", new_certificate_path(:employee_id => @user_info.employee_id) %></button>
+    <button class="btn" style="float: right; position: relative;"><%= link_to "Add Certificate", new_certificate_path(:employee_id => @user.employee_id) %></button>
 
    <table border="1" style="width:50%">
         <thead>
@@ -82,7 +87,7 @@
   </section>
     
   <section id="content3">
-    <button class="btn" style="float: right; position: relative;"><%= link_to "Add Class Attendance", new_class_attd_path(:employee_id => @user_info.employee_id) %></button>
+    <button class="btn" style="float: right; position: relative;"><%= link_to "Add Class Attendance", new_class_attd_path(:employee_id => @user.employee_id) %></button>
      <table border="1" style="width:80%">
         <thead>
           <tr>
