Change images for manage page, add fire certificates and EMS for user show page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -13,10 +13,10 @@ a:hover {
 }
 
 td a {
-	color: red;
+	color: #1B48B5;
 	text-decoration: none;
 }
 
 td a:hover {
-	color: red;
+	color: #1B48B5;
 }
